[package]
name = "nebulon"
version = "0.1.0"
edition = "2024"
authors = [
    "Dilibe Fidelugwuowo franklinfidelugwuowo@gmail.com",
]
description = "Nebulon: a lightweight containerization runtime"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
async-std = "1.13.2"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
copy_dir = "0.1.3"
env_logger = "0.11.8"
flate2 = "1.1.4"
futures = "0.3.31"
ipnetwork = "0.21.1"
lazy_static = "1.5.0"
libc = "0.2.176"
log = "0.4.28"
log4rs = "1.4.0"
nix = { version = "0.30.1", features = ["fs", "hostname", "mount", "net", "sched", "signal", "user"] }
pnet = "0.35.0"
rtnetlink = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sysinfo = "0.37.2"
tar = "0.4.44"
uuid = { version = "1.18.1", features = ["v4"] }

[[bin]]
name = "nb"
path = "src/main.rs"
